static/css/wheregoes.css
/* CSS */

body {
  background-color: antiquewhite;
  font-family: et-book, Palatino, palatino linotype, palatino lt std, book antiqua, Georgia, serif;
}

/* form.html */

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  margin: auto;
  padding-top: 150px;
}

.form-container {
  max-width: 400px;
  width: 100%;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 4px;
  background-color: #f5f5f5;
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid black;
}

.form-container input[type="text"],
.form-container input[type="submit"] {
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
  box-sizing: border-box;
}

.form-container input[type="submit"] {
  background-color: aquamarine;
}

.button-85 {
  padding: 0.6em 2em;
  border: none;
  outline: none;
  color: rgb(255, 255, 255);
  background: #eeaff0;
  cursor: pointer;
  position: relative;
  z-index: 0;
  border-radius: 10px;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.button-85:before {
  content: "";
  background: linear-gradient(45deg,
      #ff0000,
      #ff7300,
      #fffb00,
      #48ff00,
      #00ffd5,
      #002bff,
      #7a00ff,
      #ff00c8,
      #ff0000);
  position: absolute;
  top: -2px;
  left: -2px;
  background-size: 400%;
  z-index: -1;
  filter: blur(5px);
  -webkit-filter: blur(5px);
  width: calc(100% + 4px);
  height: calc(100% + 4px);
  animation: glowing-button-85 20s linear infinite;
  transition: opacity 0.3s ease-in-out;
  border-radius: 10px;
}

@keyframes glowing-button-85 {
  0% {
    background-position: 0 0;
  }

  50% {
    background-position: 400% 0;
  }

  100% {
    background-position: 0 0;
  }
}

.button-85:after {
  z-index: -1;
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background: #222;
  left: 0;
  top: 0;
  border-radius: 10px;
}

/* result.html */
h2 {
  margin-left: 0.5%;
}

ol {
  margin-left: 10px;
}

li {
  margin: 10px 0;
  padding-left: 5px;
}

.button-3 {
  appearance: none;
  background-color: #2ea44f;
  border: 1px solid rgba(27, 31, 35, .15);
  border-radius: 6px;
  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  /* font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; */
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  margin-left: 3%;
  padding: 6px 16px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: middle;
  white-space: nowrap;
}

.button-3:focus:not(:focus-visible):not(.focus-visible) {
  box-shadow: none;
  outline: none;
}

.button-3:hover {
  background-color: #2c974b;
}

.button-3:focus {
  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
  outline: none;
}

.button-3:disabled {
  background-color: #94d3a2;
  border-color: rgba(27, 31, 35, .1);
  color: rgba(255, 255, 255, .8);
  cursor: default;
}

.button-3:active {
  background-color: #298e46;
  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
}

.button-3>a {
  color: whitesmoke;
}

#resultsDiv {
  padding-left: 5%;
  padding-right: 5%;
}

#removed-params {
  margin-left: 3%;
}

#final-hop,
.hop-row {
  display: flex;
  align-items: center;
  padding-top: 10px;
  padding-bottom: 15px;
  align-items: first baseline;
}

.header-row {
  display: flex;
  align-items: center;
  gap: 10px;
  padding-top: 3px;
  padding-bottom: 5px;
  align-items: first baseline;
  justify-content: space-between;
}

.hop-number {
  display: flex;
  font-weight: bold;
  flex-basis: 7%;
  justify-content: flex-start;
  margin-right: 20px;
}

.status-code-header {
  display: flex;
  flex-basis: 8%;
  justify-content: flex-start;
  margin-right: 20px;
}

.status-code {
  display: flex;
  border-radius: 5px;
  color: #fff;
  flex-basis: 8%;
  justify-content: flex-start;
  position: relative;
}

#status-button {
  width: 50%;
  display: inline-block;
  border-radius: 5px;
  text-align: center;
  padding: 10px 10px 10px 10px;
}

.status-code-2xx {
  background-color: #28a745;
}

.status-code-3xx {
  background-color: #007bff;
}

.status-code-4xx {
  background-color: #dc3545;
}

.status-code-5xx {
  background-color: #ffc107;
}

.url-header {
  display: flex;
  flex-basis: 85%;
  justify-content: flex-start;
}

.url {
  display: flex;
  flex-basis: 85%;
  justify-content: flex-start;
  align-self: self-end;
  overflow-wrap: break-word;
  word-break: break-all;
  margin-right: 20px;
}

#title {
  width: 30%;
  text-align: left;
  vertical-align: middle;
  display: inline-block;
}

#resultsHeader {
  width: 80%;
  /* Adjust the width as needed */
  display: inline-block;
  vertical-align: middle;
}

#another {
  width: auto;
  /* Adjust the width as needed */
  text-align: center;
  vertical-align: middle;
  display: inline-block;
}

.tooltip-container {
  position: relative;
  width: 80px;
  padding-right: 60px;
}

.tooltip {
  position: absolute;
  visibility: hidden;
  width: 120px;
  background-color: #f26dbe;
  color: #000;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  bottom: 100%;
  left: 50%;
  transform: translateX(-50%);
  margin-bottom: 5px;
}

.tooltip-container:hover .tooltip {
  visibility: visible;
}

